# rasten

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  rasten
include/: Geom.hpp  Render.hpp
src/: Camera.cpp  Camera.hpp  Geom.cpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp  Render.cpp  ResourceManager.cpp  ResourceManager.hpp  main.cpp
src/CPURender/: Rasterizer.cpp  Rasterizer.hpp  RasterizerGeometry.cpp  RasterizerGeometry.hpp
